Remove cart on successful payment
